// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UnreadChannelIndicator should match snapshot 1`] = `
<div
  className="nav-pills__unread-indicator "
  id="unreadIndicatorundefined"
  onClick={[Function]}
>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when content is an element 1`] = `
<div
  className="nav-pills__unread-indicator nav-pills__unread-indicator--visible "
  id="unreadIndicatorundefined"
  onClick={[Function]}
>
  <div>
    foo
  </div>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when content is text 1`] = `
<div
  className="nav-pills__unread-indicator nav-pills__unread-indicator--visible "
  id="unreadIndicatorundefined"
  onClick={[Function]}
>
  foo
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;

exports[`components/UnreadChannelIndicator should match snapshot when show is set 1`] = `
<div
  className="nav-pills__unread-indicator nav-pills__unread-indicator--visible "
  id="unreadIndicatorundefined"
  onClick={[Function]}
>
  <UnreadBelowIcon
    className="icon icon__unread"
  />
</div>
`;
